--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,9 +15,12 @@
     "@types/react": "~18.0.0",
     "@types/react-native": "~0.69.1",
     "axios": "^1.1.3",
+    "babel-plugin-inline-dotenv": "^1.7.0",
     "country-list": "^2.2.0",
+    "dayjs": "^1.11.6",
+    "dotenv": "^16.0.3",
     "expo": "~46.0.16",
-    "expo-auth-session": "~3.7.1",
+    "expo-auth-session": "3.7.1",
     "expo-font": "~10.2.0",
     "expo-random": "~12.3.0",
     "expo-status-bar": "~1.4.0",
@@ -25,6 +28,7 @@
     "native-base": "^3.4.20",
     "phosphor-react-native": "^1.1.2",
     "react": "18.0.0",
+    "react-country-flag": "^3.0.2",
     "react-native": "0.69.6",
     "react-native-country-flag": "^1.1.9",
     "react-native-safe-area-context": "4.3.1",
@@ -34,6 +38,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/country-list": "^2.1.1",
     "react-native-svg-transformer": "^1.0.0"
   },
   "overrides": {
